# adminee

./: .cursorignore  .dockerignore  .env.example  .example.env  .gitignore  .tmp.env  API_KEY_SECURITY_STRATEGY.md  CLAUDE.md  COMMIT_MESSAGE.md  Dockerfile  Dockerfile.auth-service  Dockerfile.calendar-service  Dockerfile.chat-service  Dockerfile.email-service  Dockerfile.email_sync  Dockerfile.frontend  Dockerfile.office-router  Dockerfile.office-service  Dockerfile.postgres  Dockerfile.user-service  Dockerfile.vespa-query  Makefile  OPENTELEMETRY_SETUP.md  README.md  SHARED_PACKAGES_SETUP.md  briefly.code-workspace  check_db_schema.py  clear_cache_debug.py  cloudbuild.yaml  commit-message.txt  coverage-chat-service.xml  coverage-office-service.xml  coverage-user-management.xml  coverage.xml  demo_workflow.py  diff.txt  docker-compose.email_sync.yml  docker-compose.yml  email_tracking.json  env.postgres.example  (+23 more)
services/api/v1/: README.md  __init__.py  pyproject.toml
services/chat/: README_chat.md  alembic.ini  api.py  auth.py  chat_agent.py  context_manager.py  events.py  history_manager.py  llama_manager.py  llm_manager.py  main.py  models.py  pyproject.toml  requirements.txt  service_client.py  settings.py  start.sh  streaming.py  tool_integration.py  workflow_agent.py  workflow_manager.py
services/chat/agents/: README_multi_agent.md  briefly_agent.py  calendar_agent.py  chat_agent.py  coordinator_agent.py  document_agent.py  draft_agent.py  email_agent.py  llama_manager.py  llm_manager.py  llm_tools.py  llm_tools_old.py  workflow_agent.py
services/chat/alembic/: env.py
services/chat/openapi/: schema.json
services/chat/schemas/: __init__.py  office_responses.py
services/chat/steps/: __init__.py  base_step.py  clarifier_step.py  draft_builder_step.py  planner_step.py  tool_executor_step.py
services/chat/tests/: test_base.py  test_briefly_agent_context.py  test_calendar_draft_editing.py  test_calendar_draft_update.py  test_chat_agent.py  test_chat_auth.py  test_chat_service_e2e.py  test_clarifier_step.py  test_draft_agent_tools.py  test_draft_builder_step.py  test_events.py  test_history_manager.py  test_llama_manager.py  test_llama_manager_integration.py  test_llm_manager.py  test_llm_tools.py  test_main.py  test_multi_agent.py  test_planner_step.py  test_timezone_functionality.py  test_tool_discovery.py  test_tool_executor_step.py  test_tool_integration.py  test_workflow_agent.py
services/chat/tools/: __init__.py  data_tools.py  draft_tools.py  get_tools.py  search_tools.py  tool_registry.py  utility_tools.py  web_tools.py
services/common/: README.md  README_logging.md  __init__.py  api_key_auth.py  auth.py  config_secrets.py  database_config.py  http_errors.py  jwt_auth.py  llm_manager.py  logging_config.py  postgres_urls.py  pubsub_client.py  pyproject.toml  secrets.py  settings.py  setup.py  telemetry.py  test_utils.py
services/common/config/: subscription_config.py
services/common/events/: README.md  __init__.py  base_events.py  calendar_events.py  contact_events.py  document_events.py  email_events.py  internal_tool_events.py  test_events.py  todo_events.py
services/common/idempotency/: idempotency_keys.py  idempotency_service.py  redis_reference.py
services/common/models/: document_chunking.py  email_contact.py
services/common/pagination/: __init__.py  base.py  query_builder.py  schemas.py  token_manager.py
services/common/services/: document_chunking_service.py
services/common/test_util/: README.md  __init__.py  postgres_test_db.py
services/common/tests/: test_alias_choices.py  test_base_with_timestamps.py  test_common_pagination.py  test_database_config.py  test_document_chunking_service.py  test_event_driven_architecture_integration.py  test_http_errors.py  test_idempotency.py  test_logging_config.py  (+5 more)
services/contacts/: POSTGRES_TESTING_PROTOTYPE.md  __init__.py  alembic.ini  auth.py  database.py  main.py  pyproject.toml  settings.py
services/email_sync/: README.md  app.py  database.py  docker-compose.yml  email_parser_service.py  email_tracking.py  gmail_api_client.py  gmail_subscription_manager.py  gmail_sync_service.py  main.py  microsoft_graph_client.py  microsoft_subscription_manager.py  microsoft_sync_service.py  microsoft_webhook.py  observability.py  pubsub_client.py  pyproject.toml  requirements.txt  schemas.py  security.py  test_data.py  test_email_parser_integration.py  test_email_parser_service.py  test_email_tracking.py  test_gmail_api_client.py  test_gmail_subscription_manager.py  test_gmail_sync_service.py  test_gmail_webhook.py  test_health.py  test_integration_pipeline.py  test_microsoft_graph_client.py  test_microsoft_subscription_manager.py  test_microsoft_sync_service.py  test_microsoft_webhook.py  test_webhook_integration.py
services/meetings/: API_DOCUMENTATION.md  README.md  alembic.ini  main.py  pyproject.toml  requirements-dev.txt  run_tests.py  settings.py
services/office/: README.md  alembic.ini  pyproject.toml  requirements.txt  start.sh  test_cache_debug.py  test_service_auth.py
services/office_router/: README.md  __init__.py  main.py  models.py  pubsub_consumer.py  pyproject.toml  requirements.txt  router.py  settings.py
services/shipments/: API_DOCUMENTATION.md  README.md  __init__.py  alembic.ini  database.py  email_parser.py  event_service.py  llm_cache.py  llm_models.py  llm_parser.py  main.py  pyproject.toml  service_auth.py  settings.py  start.sh  test_base.py  test_endpoints.py  test_service_auth.py
services/user/: API_DOCUMENTATION.md  README.md  alembic.ini  database.py  debug_scopes.py  logging_config.py  main.py  pyproject.toml  requirements.txt  schema_generator.py  settings.py  start.sh
services/vespa_loader/: __init__.py  content_normalizer.py  document_factory.py  email_processor.py  embeddings.py  ingest_service.py  main.py  mapper.py  models.py  pubsub_consumer.py  pyproject.toml  requirements.txt  settings.py  types.py  vespa_client.py  vespa_types.py
services/vespa_query/: main.py  pyproject.toml  query_builder.py  result_processor.py  search_engine.py  settings.py
(+1206 files in other folders)
