[project]
name = "briefly-chat"
version = "0.1.0"
description = "Briefly Chat Service"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.116.1,<1.0.0",
    "uvicorn[standard]>=0.22.0,<1.0.0",
    "pydantic==2.11.7",
    "structlog>=25.4.0,<26.0.0",
    "httpx>=0.24.0,<1.0.0",

    # LLM and AI
    "llama-index>=0.12.0,<0.13.0",
    "llama-index-embeddings-openai>=0.3.0,<0.4.0",
    "llama-index-llms-litellm>=0.3.0,<0.6.0",
    "litellm==1.73.6",

    # Database
    "sqlmodel>=0.0.24",
    "sqlalchemy>=2.0.0",
    "aiosqlite",
    "asyncpg",
    "alembic",
    "greenlet",

    # GCP
    "google-cloud-secret-manager",

    # OpenTelemetry
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-distro",
    "opentelemetry-exporter-gcp-trace"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "respx"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
