[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "common"
version = "0.1.0"
description = "Common utilities and shared code for Briefly services"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "structlog>=23.1.0",
    "fastapi>=0.68.0",
    "itsdangerous>=2.1.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["common"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "N", "W", "B", "C4", "UP"]
ignore = ["E501", "B008"] 