[project]
name = "briefly-common"
version = "0.1.0"
description = "Briefly Common Utilities and Shared Code"
requires-python = ">=3.12"
dependencies = [
    "structlog>=25.4.0,<26.0.0",
    "pydantic==2.11.7",
    "python-dotenv>=1.0.0,<2.0.0",
    "fastapi>=0.68.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "respx"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes
# Note: isort (`I`) is handled separately by isort to avoid conflicts
select = ["E", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = [] 