[project]
name = "briefly-contacts"
version = "0.1.0"
description = "Briefly Contacts Service - Contact discovery and management"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "sqlmodel>=0.0.8,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "itsdangerous>=2.1.0,<3.0.0",
    "structlog>=25.4.0,<26.0.0",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation",
    "google-cloud-secret-manager>=2.16.0,<3.0.0",
    "google-cloud-pubsub>=2.18.0,<3.0.0",
    "redis>=5.0.0,<6.0.0",
    "alembic>=1.12.0,<2.0.0",
    "httpx>=0.25.0,<1.0.0",
    "PyJWT>=2.8.0,<3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0,<1.0.0",
    "testcontainers>=4.12.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
