[project]
name = "briefly-email_sync"
version = "0.1.0"
description = "Email Sync Service for Briefly"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-pubsub",
    "Flask",
    "python-dotenv",
    "pytest",
    "requests",
    "pydantic"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "email_parser_service",
    "gmail_subscription_manager",
    "pubsub_client",
    "microsoft_subscription_manager",
    "gmail_sync_service",
    "gmail_api_client",
    "security",
    "observability",
    "microsoft_sync_service",
    "microsoft_graph_client",
    "schemas",
    "microsoft_webhook",
    "app"
] 