[project]
name = "briefly-email-sync"
version = "0.1.0"
description = "Email Sync Service for Briefly"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.116.1,<1.0.0",
    "uvicorn[standard]>=0.22.0,<1.0.0",
    "pydantic==2.11.7",
    "structlog>=25.4.0,<26.0.0",
    
    # GCP Services
    "google-cloud-pubsub>=2.18.0,<3.0.0",
    
    # HTTP and Utilities
    "requests>=2.31.0,<3.0.0",
    "httpx>=0.24.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    
    # Telemetry (required by common service)
    "opentelemetry-api>=1.20.0,<2.0.0",
    "opentelemetry-sdk>=1.20.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0,<1.0.0",
    "opentelemetry-instrumentation-requests>=0.42b0,<1.0.0",
    "opentelemetry-instrumentation-httpx>=0.42b0,<1.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0,<2.0.0",
    
    # Common dependencies (shared with other services)
    "briefly-common>=0.1.0"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "google-cloud-pubsub>=2.18.0,<3.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "email_parser_service",
    "gmail_subscription_manager",
    "pubsub_client",
    "microsoft_subscription_manager",
    "gmail_sync_service",
    "gmail_api_client",
    "security",
    "observability",
    "microsoft_sync_service",
    "microsoft_graph_client",
    "schemas",
    "microsoft_webhook",
    "app"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes
# Note: isort (`I`) is handled separately by isort to avoid conflicts
select = ["E", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Ignore line length for test files
[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E501"]
"*test*.py" = ["E501"] 