[project]
name = "briefly-email-sync"
version = "0.1.0"
description = "Briefly Email Synchronization Service"
requires-python = ">=3.12"
dependencies = [
    # Web Framework - Full FastAPI with OpenAPI support
    "fastapi[all]>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "pydantic>=2.6.0,<3.0.0",
    # Email processing
    "email-validator>=2.1.0,<3.0.0",
    # Utilities
    "python-dotenv>=1.0.0,<2.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
