[project]
name = "briefly-office"
version = "0.1.0"
description = "Briefly Office Integration Service"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.116.1,<1.0.0",
    "uvicorn[standard]",
    "pydantic==2.11.7",
    "python-dotenv",
    "structlog>=25.4.0,<26.0.0",
    "httpx",
    "requests",
    "email-validator",
    # Database
    "sqlmodel>=0.0.24",
    "sqlalchemy>=2.0.0",
    "aiosqlite",
    "asyncpg",
    "alembic",
    # External API Integrations
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-api-python-client",
    "msal",
    # Caching
    "redis",
    # GCP
    "google-cloud-secret-manager",
    "google-cloud-pubsub",
    # OpenTelemetry
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-distro",
    "opentelemetry-exporter-gcp-trace",
    "itsdangerous>=2.2.0",
    # HTML Processing
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
