[tool.poetry]
name = "briefly-vespa-loader"
version = "0.1.0"
description = "Briefly Vespa Loader Service - Consumes email data and indexes into Vespa"
authors = ["Briefly Team"]
readme = "README.md"
packages = [{include = "services.vespa_loader"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = "2.11.7"
structlog = "^25.4.0"
aiohttp = "^3.9.1"
google-cloud-pubsub = "^2.31.1"
numpy = "^1.26.0"
huggingface-hub = "^0.20.0"
sentence-transformers = "^2.5.0"
opentelemetry-api = "^1.9.0"
opentelemetry-sdk = "^1.9.0"
opentelemetry-instrumentation = "^0.40.0"
opentelemetry-instrumentation-fastapi = "^0.40.0"
opentelemetry-distro = "^0.40.0"
opentelemetry-exporter-gcp-trace = "^1.9.0"
google-cloud-secret-manager = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
respx = "^0.20.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
