[tool.poetry]
name = "briefly-vespa-query"
version = "0.1.0"
description = "Briefly Vespa Query Service - Query interface for hybrid search capabilities"
authors = ["Briefly Team"]
readme = "README.md"
packages = [{include = "services/vespa_query"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = "2.11.7"
structlog = "^25.4.0"
aiohttp = "^3.9.1"
opentelemetry-api = "^1.9.0"
opentelemetry-sdk = "^1.9.0"
opentelemetry-instrumentation = "^0.40.0"
opentelemetry-instrumentation-fastapi = "^0.40.0"
opentelemetry-distro = "^0.40.0"
opentelemetry-exporter-gcp-trace = "^1.9.0"
google-cloud-secret-manager = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
respx = "^0.22.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
